SPORT-42: posts refactor
